--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ services:
   - docker
 
 before_install:
-  - docker run -e CI=true USERNAME/react-test npm test -- --coverage
+  - docker build -t danlan/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true danlan26/react-test npm test -- 
+  - docker run -e CI=true danlan26/react-test npm test -- --coverage
 
 after_success:
   - docker build -t danlan26/multi-client ./client
